[tool.poetry]
name = "lnpayroll"
version = "0.1.0"
description = "Bitcoin Lightning Payroll Processing"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
loguru = "^0.6.0"
lnurl = "^0.3.6"
requests = "^2.28.2"
django-constance = {extras = ["database"], version = "^2.9.1"}
shared-memory-dict = "^0.7.2"
django-object-actions = "^4.1.0"
django-admin-interface = "^0.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
poethepoet = "*"
pytest-django = "^4.5.2"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lnpayroll.settings"

[tool.poe.tasks]
format = { cmd = "poetry run black .", help = "Code style formating with black" }
lf = { cmd = "poetry run python -m dev.lf", help = "Convert line endings to lf"}
test = { cmd = "poetry run pytest", help = "Run tests" }
all = ["format", "lf", "test"]
config = { cmd = "poetry run python -m dev.config", help = "Reset development environment"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
